# playground

./: AGENTS.md  README.md  WORKFLOW-code.md  WORKFLOW.md  pyproject.toml
.agents/skills/clean/: SKILL.md
.agents/skills/lessons/: SKILL.md
docs/lessons_learned/: 2026-05-05-concurrency-5-state-growth.md  2026-05-06-code-workflow-concurrency-3-smoke.md
src/daedalus_playground/: __init__.py  aurora.py  cli.py  comet.py  drift.py  ember.py  fable.py  glimmer.py  greetings.py  harbor.py  ion.py  juno.py
src/playground/: aurora.py  beacon.py  beacon2.py  beryl.py  cli.py  comet.py  dapple.py  delta2.py  drift.py  dune.py  ember.py  ember2.py  equinox.py  fable.py  flint.py  garnet.py  glimmer.py  glyph.py  greetings.py  grove.py  harbor.py  hazel.py  helio.py  indigo.py  ion.py  iris.py  ivor.py  jasper.py  juniper.py  juno.py  kappa.py  kelp.py  kiln.py  knoll.py  larch.py  lyric.py  matrix.py  maven.py  meadow.py  nacre.py  (+20 more)
tests/: test_aurora.py  test_beacon.py  test_beacon2.py  test_beryl.py  test_cli.py  test_comet.py  test_dapple.py  test_delta2.py  test_drift.py  test_dune.py  test_ember.py  test_ember2.py  test_equinox.py  test_fable.py  test_flint.py  test_garnet.py  test_glimmer.py  test_glyph.py  test_greeting_templates.py  test_greetings.py  test_grove.py  test_harbor.py  test_hazel.py  test_helio.py  test_indigo.py  test_ion.py  test_iris.py  test_ivor.py  test_jasper.py  test_juniper.py  test_juno.py  test_kappa.py  test_kelp.py  test_kiln.py  test_knoll.py  test_larch.py  test_lyric.py  test_matrix.py  test_maven.py  test_meadow.py  (+22 more)
(+1 files in other folders)
