[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daedalus-playground"
version = "0.1.0"
description = "Small smoke-test target repository for Daedalus workflows."
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
